Fix CORS 403 on POST requests through HA ingress
Use setAllowedOriginPatterns("*") instead of hardcoded localhost
origins so requests from the HA ingress origin
(http://192.168.1.252:8123) pass CORS preflight checks. Safe because
the backend is only reachable behind the nginx proxy on the private
home network.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>