@@ -6,7 +6,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -25,17 +24,11 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow frontend origins
-        config.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://localhost:3001",
-            "http://frontend:3000",
-            "http://127.0.0.1:3000",
-            "http://127.0.0.1:3001"
-        ));
+        // Allow all origins - backend is behind nginx proxy, never directly exposed
+        config.setAllowedOriginPatterns(List.of("*"));
 
         // Allow all HTTP methods
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
 
         // Allow all headers (including X-Hass-User for Home Assistant auth)
         config.setAllowedHeaders(List.of("*"));
